Add user-agent to hytale papi